# cookbook

./: .gitignore  .prettierignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  plan.md
.husky/: pre-commit
api/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  openapi.json  pyproject.toml  seed.py  test.db
api/app/: main.py
api/app/api/v1/: deps.py
api/app/api/v1/routes/: auth.py  ingredients.py  recipes.py  users.py
api/app/core/: config.py  logging.py  security.py
api/app/db/: schema.py
api/app/models/: ingredient.py  recipe.py  user.py
api/app/services/: auth_service.py  ingredient_service.py  recipe_service.py  user_service.py
api/migrations/: env.py
api/migrations/versions/: 6db3b06cd46f_initial.py  919aaca2322f_add_recipe_visibility.py  ba67ed460578_initial.py  bb8524ff66a7_init.py
api/tasks/: export_openapi.py  init_admin.py  purge_db.py  seed.py
api/tests/: conftest.py
api/tests/api/v1/routes/: test_auth.py  test_ingredients.py  test_recipes.py  test_users.py
api/tests/services/: test_auth_service.py  test_ingredient_service.py  test_recipe_service.py  test_user_service.py
apps/mobile/: package.json
apps/web/: Dockerfile  README.md  package.json
apps/web/app/: root.tsx  routes.ts
apps/web/app/components/: index.ts
apps/web/app/components/ingredients/: IngredientForm.tsx  IngredientTable.tsx
apps/web/app/components/layout/: Navbar.tsx  ProtectedRoute.tsx
apps/web/app/components/recipes/: RecipeCard.tsx  RecipeIngredientRow.tsx  RecipeList.tsx  RecipeStepRow.tsx
apps/web/app/hooks/: useAuth.ts  useIngredients.ts  useRecipes.ts
apps/web/app/routes/: home.tsx
apps/web/app/services/: api.ts
apps/web/app/store/: auth.ts
scripts/: generate-types.sh
(+9 files in other folders)
