[project]
name = "cookbook-server"
version = "0.0.1"
description = "Backend service for cookbook"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
pythonpath = "."