[project]
name = "cookbook-server"
version = "0.0.1"
description = "Backend service for cookbook"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.116.1",
    "psycopg2-binary>=2.9.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.10.1",
    "pwdlib[argon2]>=0.2.0",
    "pyjwt>=2.0.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "httpx2",
    "pytest>=8.4.1",
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = "."

[tool.setuptools.packages.find]
include = ["app*"]